--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "前端学习/☁小程序/开始/04宿主环境/03组件.md",
+            "file": "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/00index.md",
             "mode": "source",
             "backlinks": true,
             "source": false
@@ -41,7 +41,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "normalize",
+                "query": "工厂",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -54,7 +54,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 217.51219177246094
+    "width": 308.51219177246094
   },
   "right": {
     "id": "535117ac6b3b57ba",
@@ -70,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "前端学习/☁小程序/开始/04宿主环境/03组件.md",
+                "file": "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/00index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,7 +87,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "前端学习/☁小程序/开始/04宿主环境/03组件.md"
+                "file": "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/00index.md"
               }
             }
           },
@@ -112,20 +112,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 268,
+    "width": 253.74795532226562,
     "collapsed": true
   },
   "active": "a5870433a900be55",
   "lastOpenFiles": [
-    "前端学习/☁小程序/开始/04宿主环境/00宿主环境.md",
-    "前端学习/☁小程序/开始/04宿主环境/03组件.md",
-    "前端学习/☁小程序/开始/04宿主环境/02运行机制.md",
-    "前端学习/☁小程序/开始/04宿主环境/01通信模型.md",
-    "前端学习/☁小程序/开始/03JS逻辑交互.md",
-    "前端学习/☁小程序/开始/02WXSS样式.md",
-    "前端学习/☁小程序/开始/01WXML模板.md",
-    "前端学习/☁小程序/开始/00JSON 配置文件.md",
-    "前端学习/📦项目/公司git.md",
-    "前端学习/📦项目/SPH.md"
+    "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/01简单工厂模式.md",
+    "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/02工厂方法模式.md",
+    "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/03抽象工厂模式.md",
+    "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/00index.md",
+    "前端学习/🔮设计模式/01设计模式（23）/创造型/单例模式/00index.md",
+    "前端学习/🔮设计模式/01设计模式（23）/创造型/单例模式/单例模式.md",
+    "前端学习/🔮设计模式/01设计模式（23）/创造型/原型模式.md",
+    "前端学习/🔮设计模式/00设计模式原则/01-S单一职责原则.md",
+    "前端学习/😄三件套+/JS高级/对象/对象创建模式/3工厂模式.md"
   ]
 }
