token的存储与刷新

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -9,7 +9,7 @@
   "alwaysUpdateLinks": true,
   "trashOption": "local",
   "newLinkFormat": "relative",
-  "attachmentFolderPath": "前端学习/☁小程序/img",
+  "attachmentFolderPath": "前端学习/🕷网络/cookie_session_token/img",
   "communityPluginSortOrder": "download",
   "strictLineBreaks": true,
   "vimMode": false,
