--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/00index.md",
+            "file": "前端学习/🕷网络/cookie_session_token/token.md",
             "mode": "source",
             "backlinks": true,
             "source": false
@@ -41,7 +41,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "工厂",
+                "query": "last-",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -70,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/00index.md",
+                "file": "前端学习/🕷网络/cookie_session_token/token.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,7 +87,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/00index.md"
+                "file": "前端学习/🕷网络/cookie_session_token/token.md"
               }
             }
           },
@@ -117,14 +117,15 @@
   },
   "active": "a5870433a900be55",
   "lastOpenFiles": [
+    "obisdian_note/前端学习/📕面试题/前端面试题.md",
+    "前端学习/📕面试题/前端面试题.md",
+    "前端学习/🕷网络/cookie_session_token/token.md",
+    "前端学习/🕷网络/cookie_session_token/cookie.md",
+    "前端学习/🕷网络/未命名.md",
+    "前端学习/📕面试题/前端面试500题/三阶段面试题/三阶段面试题库.md",
+    "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/00index.md",
     "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/01简单工厂模式.md",
     "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/02工厂方法模式.md",
-    "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/03抽象工厂模式.md",
-    "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/00index.md",
-    "前端学习/🔮设计模式/01设计模式（23）/创造型/单例模式/00index.md",
-    "前端学习/🔮设计模式/01设计模式（23）/创造型/单例模式/单例模式.md",
-    "前端学习/🔮设计模式/01设计模式（23）/创造型/原型模式.md",
-    "前端学习/🔮设计模式/00设计模式原则/01-S单一职责原则.md",
-    "前端学习/😄三件套+/JS高级/对象/对象创建模式/3工厂模式.md"
+    "前端学习/🔮设计模式/01设计模式（23）/创造型/工厂模式/03抽象工厂模式.md"
   ]
 }
