--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,15 +1,15 @@
 {
   "legacyEditor": false,
-  "livePreview": true,
+  "livePreview": false,
   "promptDelete": false,
   "readableLineLength": true,
   "showFrontmatter": true,
-  "showLineNumber": false,
+  "showLineNumber": true,
   "useMarkdownLinks": false,
   "alwaysUpdateLinks": true,
   "trashOption": "local",
   "newLinkFormat": "relative",
-  "attachmentFolderPath": "前端学习/🕷网络/cookie_session_token/img",
+  "attachmentFolderPath": "前端学习/🔮设计模式/img",
   "communityPluginSortOrder": "download",
   "strictLineBreaks": true,
   "vimMode": false,
