--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,10 +1,11 @@
 {
-  "baseFontSize": 21,
+  "baseFontSize": 20,
   "translucency": false,
   "theme": "moonstone",
   "enabledCssSnippets": [
     "myStyle"
   ],
-  "monospaceFontFamily": "DejaVu Sans Mono",
-  "textFontFamily": "微软雅黑,黑体"
+  "monospaceFontFamily": "DejaVu Sans Mono,Inter",
+  "textFontFamily": "",
+  "cssTheme": "Minimal"
 }
