--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "前端学习/☁小程序/开始/05条件渲染.md",
+            "file": "前端学习/☁小程序/配置/全局配置.md",
             "mode": "source",
             "backlinks": true,
             "source": true
@@ -41,7 +41,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "光标",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -70,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "前端学习/☁小程序/开始/05条件渲染.md",
+                "file": "前端学习/☁小程序/配置/全局配置.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,7 +87,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "前端学习/☁小程序/开始/05条件渲染.md"
+                "file": "前端学习/☁小程序/配置/全局配置.md"
               }
             }
           },
@@ -117,15 +117,15 @@
   },
   "active": "f0855ad624ed6005",
   "lastOpenFiles": [
-    "前端学习/☁小程序/开始/04事件绑定.md",
-    "前端学习/☁小程序/开始/05条件渲染.md",
-    "前端学习/☁小程序/绑定/事件绑定.md",
-    "前端学习/☁小程序/绑定/数据绑定.md",
+    "前端学习/☁小程序/样式/全局样式与局部样式.md",
     "前端学习/☁小程序/开始/00JSON 配置文件.md",
-    "前端学习/☁小程序/开始/01WXML模板.md",
-    "前端学习/☁小程序/开始/02WXSS样式.md",
-    "前端学习/☁小程序/开始/03JS逻辑交互.md",
-    "前端学习/ES_TS/TypeScript/接口/03可索引接口.md",
-    "前端学习/ES_TS/TypeScript/接口/04类实现接口.md"
+    "前端学习/☁小程序/样式/样式引入.md",
+    "前端学习/☁小程序/样式/rpx.md",
+    "Excalidraw/Drawing 2022-08-24 18.58.47.excalidraw.md",
+    "Excalidraw/Drawing 2022-08-24 18.58.41.excalidraw.md",
+    "前端学习/vscode配置/自定义光标颜色.md",
+    "前端学习/🍬实用技巧/PS技巧.md",
+    "前端学习/🍬实用技巧/markdown技巧.md",
+    "前端学习/☁小程序/开始/02WXSS样式.md"
   ]
 }
