--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,7 +1,7 @@
 {
   "baseFontSize": 20,
   "translucency": false,
-  "theme": "moonstone",
+  "theme": "obsidian",
   "enabledCssSnippets": [
     "myStyle"
   ],
