--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,5 @@
 {
-  "monospaceFontFamily": "DejaVu Sans Mono",
+  "monospaceFontFamily": "Lucida Console,DejaVu Sans Mono",
   "textFontFamily": "微软雅黑,黑体",
   "baseFontSize": 28,
   "cssTheme": "Obsidian Nord",
