type challenge easy part

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -9,10 +9,10 @@
   "alwaysUpdateLinks": true,
   "trashOption": "local",
   "newLinkFormat": "relative",
-  "attachmentFolderPath": "前端学习/☁小程序/img",
+  "attachmentFolderPath": "前端学习/😄三件套+/ES_TS/TypeScript/img",
   "communityPluginSortOrder": "download",
   "strictLineBreaks": true,
-  "vimMode": false,
+  "vimMode": true,
   "pdfExportSettings": {
     "pageSize": "Letter",
     "landscape": false,
