--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -20,6 +20,6 @@
     "downscalePercent": 100
   },
   "tabSize": 2,
-  "showUnsupportedFiles": true,
+  "showUnsupportedFiles": false,
   "fileSortOrder": "alphabetical"
 }
