--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,25 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "458151de9910f4c5",
+        "id": "22e94962c0b7a056",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "前端学习/☁小程序/事件/00事件.md",
-            "mode": "source",
-            "backlinks": true,
-            "source": true
-          }
-        }
-      },
-      {
-        "id": "6950c1a8064fd579",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "前端学习/🌎性能优化/01_浏览器功能与组成.md",
+            "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/keyof typeof.md",
             "mode": "source",
             "backlinks": true,
             "source": true
@@ -54,7 +41,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "shared",
+                "query": "stack",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -83,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "前端学习/☁小程序/事件/00事件.md",
+                "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/keyof typeof.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -100,7 +87,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "前端学习/☁小程序/事件/00事件.md"
+                "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/keyof typeof.md"
               }
             }
           },
@@ -119,17 +106,17 @@
     "width": 331.63226318359375,
     "collapsed": true
   },
-  "active": "458151de9910f4c5",
+  "active": "22e94962c0b7a056",
   "lastOpenFiles": [
+    "前端学习/📦项目/00index.md",
+    "前端学习/📕面试题/前端面试题.md",
+    "前端学习/😄三件套+/ES_TS/TypeScript/00类型/01.md",
+    "未命名.md",
+    "前端学习/📕面试题/前端面试500题/三阶段面试题/三阶段.md",
+    "前端学习/API.md",
     "前端学习/🌎性能优化/01_浏览器功能与组成.md",
-    "前端学习/☁小程序/事件/00事件.md",
-    "前端学习/☁小程序/开始/04事件绑定.md",
-    "前端学习/☁小程序/全局数据共享.md",
-    "前端学习/☁小程序/temp.md",
-    "前端学习/🌎性能优化/02_浏览器渲染引擎与阻塞.md",
-    "前端学习/☁小程序/分包/00分包.md",
-    "前端学习/☁小程序/分包/分配分包预下载.md",
-    "前端学习/☁小程序/分包/独立分包.md",
-    "前端学习/🛠版本控制/gitkeep.md"
+    "前端学习/temp.md",
+    "前端学习/😄三件套+/ES_TS/TypeScript/TypeScript文档.md",
+    "前端学习/😄三件套+/ES_TS/TypeScript/编译选项/项目选项.md"
   ]
 }
