--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,16 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "1d9cc191ea6f3d80",
+        "id": "7b40b97ea2a95bb0",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "前端学习/☁小程序/全局事件共享.md",
-            "mode": "source",
-            "backlinks": true,
-            "source": true
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -41,7 +36,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "stack",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -54,7 +49,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 213
+    "width": 347.011999130249
   },
   "right": {
     "id": "535117ac6b3b57ba",
@@ -70,13 +65,12 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "前端学习/☁小程序/全局事件共享.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
                 "showSearch": false,
                 "searchQuery": "",
-                "backlinkCollapsed": false,
+                "backlinkCollapsed": true,
                 "unlinkedCollapsed": true
               }
             }
@@ -86,9 +80,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "前端学习/☁小程序/全局事件共享.md"
-              }
+              "state": {}
             }
           },
           {
@@ -98,41 +90,25 @@
               "type": "advanced-tables-toolbar",
               "state": {}
             }
-          },
-          {
-            "id": "0115b3403c2b9733",
-            "type": "leaf",
-            "state": {
-              "type": "online.larslockefeer.obsidian-plugin-todo",
-              "state": {}
-            }
-          },
-          {
-            "id": "4afca9fb986bd081",
-            "type": "leaf",
-            "state": {
-              "type": "dictionary-view",
-              "state": {}
-            }
           }
-        ],
-        "currentTab": 2
+        ]
       }
     ],
     "direction": "horizontal",
-    "width": 274
+    "width": 331.63226318359375,
+    "collapsed": true
   },
-  "active": "1d9cc191ea6f3d80",
+  "active": "f1bf3ae1a59410c9",
   "lastOpenFiles": [
-    "前端学习/☁小程序/组件/methods规范.md",
-    "前端学习/☁小程序/wx脚本/wxs 和 js 的关系.md",
-    "前端学习/☁小程序/wx脚本/特点.md",
-    "前端学习/☁小程序/wx脚本/基础语法.md",
-    "前端学习/☁小程序/wx脚本/00index.md",
+    "前端学习/📦项目/00index.md",
+    "前端学习/📕面试题/前端面试题.md",
+    "前端学习/😄三件套+/ES_TS/TypeScript/00类型/01.md",
     "未命名.md",
-    "202208261914.md",
-    "未命名 1.md",
-    "前端学习/☁小程序/组件/02样式隔离.md",
-    "前端学习/☁小程序/组件/01组件与页面的区别.md"
+    "前端学习/📕面试题/前端面试500题/三阶段面试题/三阶段.md",
+    "前端学习/API.md",
+    "前端学习/🌎性能优化/01_浏览器功能与组成.md",
+    "前端学习/temp.md",
+    "前端学习/😄三件套+/ES_TS/TypeScript/TypeScript文档.md",
+    "前端学习/😄三件套+/ES_TS/TypeScript/编译选项/项目选项.md"
   ]
 }
