--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "前端学习/☁小程序/vant/自定义主题.md",
+            "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/交叉类型.md",
             "mode": "source",
             "backlinks": true,
             "source": true
@@ -70,8 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/keyof typeof.md",
-                "file": "前端学习/☁小程序/vant/自定义主题.md",
+                "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/交叉类型.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,7 +87,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "前端学习/☁小程序/vant/自定义主题.md"
+                "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/交叉类型.md"
               }
             }
           },
@@ -125,15 +124,15 @@
   },
   "active": "1d9cc191ea6f3d80",
   "lastOpenFiles": [
+    "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/readonly2.md",
+    "前端学习/😄三件套+/ES_TS/TypeScript/00类型/交叉类型.md",
+    "前端学习/😄三件套+/ES_TS/TypeScript/00类型/基本类型.md",
+    "前端学习/☁小程序/vant/自定义主题.md",
     "前端学习/☁小程序/全局事件共享.md",
     "前端学习/☁小程序/组件/methods规范.md",
     "前端学习/☁小程序/wx脚本/wxs 和 js 的关系.md",
     "前端学习/☁小程序/wx脚本/特点.md",
     "前端学习/☁小程序/wx脚本/基础语法.md",
-    "前端学习/☁小程序/wx脚本/00index.md",
-    "未命名.md",
-    "202208261914.md",
-    "未命名 1.md",
-    "前端学习/☁小程序/组件/02样式隔离.md"
+    "前端学习/☁小程序/wx脚本/00index.md"
   ]
 }
