--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/交叉类型.md",
+            "file": "前端学习/😁三件套/02CSS/布局/flex布局/01常用属性.md",
             "mode": "source",
             "backlinks": true,
             "source": true
@@ -41,7 +41,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "flex",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -54,7 +54,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 213
+    "width": 566.511999130249
   },
   "right": {
     "id": "535117ac6b3b57ba",
@@ -70,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/交叉类型.md",
+                "file": "前端学习/😁三件套/02CSS/布局/flex布局/01常用属性.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -87,7 +87,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/交叉类型.md"
+                "file": "前端学习/😁三件套/02CSS/布局/flex布局/01常用属性.md"
               }
             }
           },
@@ -115,8 +115,7 @@
               "state": {}
             }
           }
-        ],
-        "currentTab": 2
+        ]
       }
     ],
     "direction": "horizontal",
@@ -124,15 +123,15 @@
   },
   "active": "1d9cc191ea6f3d80",
   "lastOpenFiles": [
+    "前端学习/😁三件套/02CSS/布局/flex布局/00flex布局.md",
+    "前端学习/⚡框架/vue/异步路由/异步路由.md",
+    "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/TurpleToArray.md",
+    "前端学习/😄三件套+/ES_TS/TypeScript/00类型/object vs Object.md",
     "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/readonly2.md",
     "前端学习/😄三件套+/ES_TS/TypeScript/00类型/交叉类型.md",
     "前端学习/😄三件套+/ES_TS/TypeScript/00类型/基本类型.md",
     "前端学习/☁小程序/vant/自定义主题.md",
     "前端学习/☁小程序/全局事件共享.md",
-    "前端学习/☁小程序/组件/methods规范.md",
-    "前端学习/☁小程序/wx脚本/wxs 和 js 的关系.md",
-    "前端学习/☁小程序/wx脚本/特点.md",
-    "前端学习/☁小程序/wx脚本/基础语法.md",
-    "前端学习/☁小程序/wx脚本/00index.md"
+    "前端学习/☁小程序/组件/methods规范.md"
   ]
 }
