--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,16 +4,11 @@
     "type": "split",
     "children": [
       {
-        "id": "8730813726ef13fc",
+        "id": "a2831a4a0fbe68ee",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/StringToUnion.md",
-            "mode": "source",
-            "backlinks": true,
-            "source": true
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -70,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/StringToUnion.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,9 +80,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/StringToUnion.md"
-              }
+              "state": {}
             }
           },
           {
@@ -107,8 +99,9 @@
     "width": 264.2857971191406,
     "collapsed": true
   },
-"active": "8730813726ef13fc",
+  "active": "f1bf3ae1a59410c9",
   "lastOpenFiles": [
+    "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/StringToUnion.md",
     "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/Absolute.md",
     "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/AppendToObject.md",
     "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/Flatten.md",
@@ -117,7 +110,6 @@
     "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/TurpleToUnion.md",
     "前端学习/😄三件套+/ES_TS/TypeScript/00类型/extends/条件类型与高级类型.md",
     "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/readonly2.md",
-    "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/Omit.md",
-    "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/Pick.md"
+    "前端学习/😄三件套+/ES_TS/TypeScript/00类型/高级类型/Omit.md"
   ]
 }
